--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1004,3 +1004,9 @@ main {
 .shake {
   animation: shake 0.6s;
 }
+
+.menu-item--disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.4;
+}
